--- a/FinalReport.Rmd
+++ b/FinalReport.Rmd
@@ -4,7 +4,7 @@ date: "April 1, 2019"
 output:
   pdf_document: default
   html_document: default
-author: Chandra Keerthi, Daniel Kwan, Bryan Phan
+author: Bryan Hai Phan, Chandra Keerthi, Daniel Kwan 
 ---
 
 i. What Is Internet Use?...............................................................................................
